[package]
name = "eventhorizon-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
hex = "0.4.3"
libp2p = { version = "0.56.0", features = ["tcp", "tokio", "noise", "yamux", "ping"] }
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.9"
sysinfo = "0.37.2"
tokio = { version = "1.38.0", features = ["full"] }
